<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/projectImage"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/btn_add_project_image"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/SelectImage" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_projectName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:hint="@string/ProjectName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="5dp"
                android:text="@string/projectCat" />

            <Spinner
                android:id="@+id/sp_selectCat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                />

            <EditText
                android:id="@+id/et_projectEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="@string/projectEmail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_projectContactNo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="@string/projectMobile"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_ProjectDonDeadline"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="@string/projectDonDeadline"
                android:inputType="date" />

            <EditText
                android:id="@+id/et_projectDonationGoal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="@string/ProjectDoantionGoal"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_projectMinDonation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="@string/projectMinDon"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_projectDescription"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="@string/projectDescription"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_update_project"
                android:layout_width="193dp"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="65dp"
                android:text="@string/addProject" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>