<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_update_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/update_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.163">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/ProjectName" />

            <EditText
                android:id="@+id/et_projectName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/ProjectName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/projectCat" />

            <Spinner
                android:id="@+id/sp_selectCat"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/projectEmail" />

            <EditText
                android:id="@+id/et_projectEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/projectEmail"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/projectMobile" />

            <EditText
                android:id="@+id/et_projectContactNo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/projectMobile"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/projectDonDeadline" />

            <EditText
                android:id="@+id/et_ProjectDonDeadline"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/projectDonDeadline"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/ProjectDoantionGoal" />

            <EditText
                android:id="@+id/et_projectDonationGoal"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:ems="10"
                android:hint="@string/ProjectDoantionGoal"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/projectMinDon" />

            <EditText
                android:id="@+id/et_projectMinDonation"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:ems="10"
                android:hint="@string/projectMinDon"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/projectDescription" />

            <EditText
                android:id="@+id/et_projectDescription"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/projectDescription"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_update_project"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="32dp"
                android:text="Update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>