<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductLandingActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="395dp"
        android:layout_height="811dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bgimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="360dp"
        android:layout_height="407dp"
        android:background="@drawable/search"
        android:backgroundTint="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <Button
        android:id="@+id/btn_Projects"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/search"
        android:backgroundTint="@color/teal_700"
        android:text="@string/SearchProjects"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btn_add_new_project"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/search"
        android:backgroundTint="@color/teal_700"
        android:text="@string/addProject"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Projects"
        app:layout_constraintEnd_toEndOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:text="@string/Projects"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_prev_projects"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/search"
        android:backgroundTint="@color/teal_700"
        android:text="@string/PreviousProjects"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_categories" />

    <Button
        android:id="@+id/btn_categories"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/search"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Categories"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>