<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="719dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_project_image"
                android:layout_width="wrap_content"
                android:layout_height="241dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/details_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/ProjectName"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_name"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/projectCat"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_cat"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/projectDescription"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_description"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/projectDonDeadline"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_deadline"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/ProjectDoantionGoal"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_goal"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/projectMinDon"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_MinDonation"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/projectEmail"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_contactEmail"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="91dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/projectMobile"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_display_contactNo"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_updatePage"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Update_details" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/deletebtn"
                android:text="@string/deleteP" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>